uncomplete but work @ rezultate.css

--- a/rezultate.html
+++ b/rezultate.html
@@ -114,105 +114,142 @@
     </nav>
 
     <!-- Statistici -->
-    <div class="main carduri">
-      <div class="cards">
-        <div class="card-s">
-          <div class="card-content">
-            <div class="number" data-val="43">00</div>
-            <div class="card-name">Membri în club</div>
-          </div>
-          <div class="icon-box">
-            <img class="iconita" src="assets/images/Icons/Membri.png" alt="" />
-          </div>
+    <div class="cards">
+      <div class="card-s">
+        <div class="card-content">
+          <div class="number" data-val="43">00</div>
+          <div class="card-name">Membri în club</div>
         </div>
-        <div class="card-s">
-          <div class="card-content">
-            <div class="number" data-val="5">0</div>
-            <div class="card-name">Ani de experiență</div>
-          </div>
-          <div class="icon-box">
-            <img
-              class="iconita"
-              src="assets/images/Icons/Ani_de_experienta__1_.png"
-              alt=""
-            />
-          </div>
+        <div class="icon-box">
+          <img class="iconita" src="assets/images/Icons/Membri.png" alt="" />
         </div>
-        <!--
-        <div class="card-s">
-          <div class="card-content">
-            <div class="number" data-val="5">0</div>
-            <div class="card-name">Parteneri</div>
-          </div>
-          <div class="icon-box">
-            <img
-              class="iconita"
-              src="assets/images/Icons/Parteneri.png"
-              alt=""
-            />
-          </div>
+      </div>
+      <div class="card-s">
+        <div class="card-content">
+          <div class="number" data-val="5">0</div>
+          <div class="card-name">Ani de experiență</div>
         </div>
-        -->
-        <div class="card-s">
-          <div class="card-content">
-            <div class="number" data-val="14">0</div>
-            <div class="card-name">Sponsori & parteneri</div>
-          </div>
-          <div class="icon-box">
-            <img
-              class="iconita"
-              src="assets/images/Icons/Sponsori__2_.png"
-              alt=""
-            />
-          </div>
+        <div class="icon-box">
+          <img
+            class="iconita"
+            src="assets/images/Icons/Ani_de_experienta__1_.png"
+            alt=""
+          />
         </div>
-        <div class="card-s">
-          <div class="card-content">
-            <div class="number" data-val="15">0</div>
-            <div class="card-name">Evenimente orgaizate</div>
-          </div>
-          <div class="icon-box">
-            <img
-              class="iconita"
-              src="assets/images/Icons/Evenimente_organizate.png"
-              alt=""
-            />
-          </div>
+      </div>
+      <!--
+      <div class="card-s">
+        <div class="card-content">
+          <div class="number" data-val="5">0</div>
+          <div class="card-name">Parteneri</div>
         </div>
-        <div class="card-s">
-          <div class="card-content">
-            <div class="number" data-val="48">00</div>
-            <div class="card-name">Participare evenimente</div>
-          </div>
-          <div class="icon-box">
-            <img
-              class="iconita"
-              src="assets/images/Icons/Participare_evenimente.png"
-              alt=""
-            />
-          </div>
+        <div class="icon-box">
+          <img
+            class="iconita"
+            src="assets/images/Icons/Parteneri.png"
+            alt=""
+          />
         </div>
-        <div class="card-s">
-          <div class="card-content">
-            <div class="number-special" data-val="6100">000</div>
-            <div class="card-name">Tineri din comunitate</div>
-          </div>
-          <div class="icon-box">
-            <img class="iconita" src="assets/images/Icons/Comunitate__2_.png" alt="" />
-          </div>
+      </div>
+      -->
+      <div class="card-s">
+        <div class="card-content">
+          <div class="number" data-val="14">0</div>
+          <div class="card-name">Sponsori & parteneri</div>
         </div>
-        <div class="card-s">
-          <div class="card-content">
-            <div class="number" data-val="15">0</div>
-            <div class="card-name">Concursuri</div>
-          </div>
-          <div class="icon-box">
-            <img
-              class="iconita"
-              src="assets/images/Icons/Concursuri__1_.png"
-              alt=""
-            />
-          </div>
+        <div class="icon-box">
+          <img
+            class="iconita"
+            src="assets/images/Icons/Sponsori__2_.png"
+            alt=""
+          />
+        </div>
+      </div>
+      <div class="card-s">
+        <div class="card-content">
+          <div class="number" data-val="15">0</div>
+          <div class="card-name">Evenimente orgaizate</div>
+        </div>
+        <div class="icon-box">
+          <img
+            class="iconita"
+            src="assets/images/Icons/Evenimente_organizate.png"
+            alt=""
+          />
+        </div>
+      </div>
+      <div class="card-s">
+        <div class="card-content">
+          <div class="number" data-val="48">00</div>
+          <div class="card-name">Participare evenimente</div>
+        </div>
+        <div class="icon-box">
+          <img
+            class="iconita"
+            src="assets/images/Icons/Participare_evenimente.png"
+            alt=""
+          />
+        </div>
+      </div>
+      <div class="card-s">
+        <div class="card-content">
+          <div class="number-special" data-val="6100">000</div>
+          <div class="card-name">Tineri din comunitate</div>
+        </div>
+        <div class="icon-box">
+          <img class="iconita" src="assets/images/Icons/Comunitate__2_.png" alt="" />
+        </div>
+      </div>
+      <div class="card-s">
+        <div class="card-content">
+          <div class="number" data-val="15">0</div>
+          <div class="card-name">Concursuri</div>
+        </div>
+        <div class="icon-box">
+          <img
+            class="iconita"
+            src="assets/images/Icons/Concursuri__1_.png"
+            alt=""
+          />
+        </div>
+      </div>
+      <div class="card-s">
+        <div class="card-content">
+          <div class="number" data-val="11">0</div>
+          <div class="card-name">Membri</div>
+        </div>
+        <div class="icon-box">
+          <img
+            class="iconita"
+            src="assets/images/Icons/Membri.png"
+            alt=""
+          />
+        </div>
+      </div>
+      <div class="card-s">
+        <div class="card-content">
+          <div class="number" data-val="___">0</div>
+          <div class="card-name">Voluntari</div>
+        </div>
+        <div class="icon-box">
+          <img
+            class="iconita"
+            src="assets/images/Icons/Membri.png"
+            alt=""
+          />
+        </div>
+      </div>
+      <div class="card-s">
+        <div class="card-content">
+          <div class="number" data-val="5">0</div>
+          <div class="card-name">Mentori</div>
+        </div>
+        <div class="icon-box">
+          <img
+            class="iconita"
+            src="assets/images/Icons/Membri.png"
+            alt=""
+          />
         </div>
       </div>
     </div>
