added voluntari + mentori

--- a/echipa.html
+++ b/echipa.html
@@ -220,15 +220,101 @@
         <span class="custom-span"> Voluntarii echipei </span>
       </div>
       <div class="item-links">
-        <span class="item-link item-voluntar menu-active" data-name="all-v">Toți membrii</span>
+        <span class="item-link item-voluntar menu-active-v" data-name="all-v">Toți voluntarii</span>
         <span class="item-link item-voluntar" data-name="mecanica-v">Mecanică</span>
         <span class="item-link item-voluntar" data-name="programare-v">Programare</span>
-        <span class="item-link item-voluntar" data-name="grafica-v">PR & Marketing</span>
-        <span class="item-link item-voluntar" data-name="pr-v">Grafică</span>
+        <span class="item-link item-voluntar" data-name="pr-v">PR & Marketing</span>
+        <span class="item-link item-voluntar" data-name="grafica-v">Grafică</span>
       </div>
 
       <!-- !!! data-name trebuie sa fie exact ca cele de aici de sus !!! -->
       <div class="team-box">
+        <div class="box box-voluntar" data-name="mecanica-v">
+          <img src="assets/images/Voluntari/Tudor Danciu.JPG" alt="" />
+          <h2>Tudor Danciu</h2>
+          <span>Voluntar Mecanică</span>
+        </div>
+        <div class="box box-voluntar" data-name="mecanica-v">
+          <img src="assets/images/Voluntari/Matei Jugureanu.JPG" alt="" />
+          <h2>Matei Jugureanu</h2>
+          <span>Voluntar Mecanică</span>
+        </div>
+        <div class="box box-voluntar" data-name="mecanica-v">
+          <img src="assets/images/Voluntari/Mihai Roman.JPG" alt="" />
+          <h2>Mihai Roman</h2>
+          <span>Voluntar Mecanică</span>
+        </div>
+        <div class="box box-voluntar" data-name="mecanica-v">
+          <img src="assets/images/Voluntari/Radu Borca.JPG" alt="" />
+          <h2>Radu Borca</h2>
+          <span>Voluntar Mecanică</span>
+        </div>
+        <div class="box box-voluntar" data-name="mecanica-v">
+          <img src="assets/images/Voluntari/Radu Indolean.JPG" alt="" />
+          <h2>Radu Indolean</h2>
+          <span>Voluntar Mecanică</span>
+        </div>
+        <div class="box box-voluntar" data-name="mecanica-v">
+          <img src="assets/images/Voluntari/Rares Calugaru.JPG" alt="" />
+          <h2>Rareș Călugăru</h2>
+          <span>Voluntar Mecanică</span>
+        </div>
+        <div class="box box-voluntar" data-name="mecanica-v">
+          <img src="assets/images/Voluntari/Razvan Dragomir.JPG" alt="" />
+          <h2>Răzvan Dragomir</h2>
+          <span>Voluntar Mecanică</span>
+        </div>
+        <div class="box box-voluntar" data-name="programare-v">
+          <img src="assets/images/Voluntari/Filip Tiron.JPG" alt="" />
+          <h2>Filip Tiron</h2>
+          <span>Voluntar Programare</span>
+        </div>
+        <div class="box box-voluntar" data-name="programare-v">
+          <img src="assets/images/Voluntari/Alexandru Tigau.JPG" alt="" />
+          <h2>Alexandru Țigău</h2>
+          <span>Voluntar Programare</span>
+        </div>
+        <div class="box box-voluntar" data-name="pr-v">
+          <img src="assets/images/Voluntari/Maya Danilov.JPG" alt="" />
+          <h2>Maya Danilov</h2>
+          <span>Voluntar PR & Marketing</span>
+        </div>
+        <div class="box box-voluntar" data-name="pr-v">
+          <img src="assets/images/Voluntari/Iasmine.JPG" alt="" />
+          <h2>Iasmine Adumitroaei</h2>
+          <span>Voluntar PR & Marketing</span>
+        </div>
+        <div class="box box-voluntar" data-name="pr-v">
+          <img src="assets/images/Voluntari/Razvan Glaje.JPG" alt="" />
+          <h2>Răzvan Glaje</h2>
+          <span>Voluntar PR & Marketing</span>
+        </div>
+        <div class="box box-voluntar" data-name="grafica-v">
+          <img src="assets/images/Voluntari/Nicolle Stefanescu.JPG" alt="" />
+          <h2>Nicolle Ștefănescu</h2>
+          <span>Voluntar Grafică</span>
+        </div>
+        <div class="box box-voluntar" data-name="grafica-v">
+          <img src="assets/images/Voluntari/Isabella.JPG" alt="" />
+          <h2>Isabela Ilie</h2>
+          <span>Voluntar Grafică</span>
+        </div>
+        <div class="box box-voluntar" data-name="grafica-v">
+          <img src="assets/images/Voluntari/Ana Pechi.JPG" alt="" />
+          <h2>Ana Pechi</h2>
+          <span>Voluntar Grafică</span>
+        </div>
+        <div class="box box-voluntar" data-name="grafica-v">
+          <img src="assets/images/Voluntari/Crina Androne.JPG" alt="" />
+          <h2>Crina Andone</h2>
+          <span>Voluntar Grafică</span>
+        </div>
+        <div class="box box-voluntar" data-name="grafica-v">
+          <img src="assets/images/Voluntari/Oana Ursache.JPG" alt="" />
+          <h2>Oana Ursache</h2>
+          <span>Voluntar Grafică</span>
+        </div>
+
       </div>
     </div>
 
@@ -242,24 +328,29 @@
       <div class="team-box">
         <!-- Membru 1 -->
         <div class="box box-mentor" data-name="mecanica-m">
-          <img src="assets/images/Membri/Ioana Preda.JPG" alt="" />
+          <img src="assets/images/Mentori/Ioana Preda.JPG" alt="" />
           <h2>Ioana Preda</h2>
           <span>Mentor Mecanică</span>
         </div>
         <!-- Membru 2 -->
         <div class="box box-mentor" data-name="mecanica-m">
-          <img src="assets/images/Membri/Serghei Țirulnic.JPG" alt="" />
+          <img src="assets/images/Mentori/Serghei Țirulnic.JPG" alt="" />
           <h2>Serghei Țirulnic</h2>
           <span>Mentor Mecanică</span>
         </div>
         <!-- Membru 3 -->
         <div class="box box-mentor" data-name="mecanica-m">
-          <img src="assets/images/Membri/Ionuț Ghiță.JPG" alt="" />
+          <img src="assets/images/Mentori/Ionuț Ghiță.JPG" alt="" />
           <h2>Ionuț Ghiță</h2>
           <span>Mentor Mecanică</span>
         </div>
         <div class="box box-mentor" data-name="programare-m">
-          <img src="assets/images/Membri/Călin Crânguș.JPG" alt="" />
+          <img src="assets/images/Mentori/Călin Crânguș.JPG" alt="" />
+          <h2>Călin Crânguș</h2>
+          <span>Mentor Programare</span>
+        </div>
+        <div class="box box-mentor" data-name="programare-m">
+          <img src="assets/images/Mentori/Ioan Stefan.JPG" alt="" />
           <h2>Călin Crânguș</h2>
           <span>Mentor Programare</span>
         </div>
