--- a/galerie.html
+++ b/galerie.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <meta http-equiv="Cache-Control" content="max-age=31536000, must-revalidate">
+
     <link rel="icon" href="assets/images/Icons/tab_icon.png" type="image/x-icon">
 
     <link
@@ -135,7 +136,7 @@
       <div class="img-gallery" id="galerie-10">
         <img
           class="square-image"
-          src="assets/images/Galerie/Open Robotics Intelligent Grid, 1-8 septembrie 2024/C0038T01.JPG"
+          src="./assets/images/Galerie/Open Robotics Intelligent Grid, 1-8 septembrie 2024/C0038T01.JPG"
           loading="lazy"
           width="250"
           onclick="openFullImg(this.src, 10)"
