update animation logo

--- a/rezultate.html
+++ b/rezultate.html
@@ -31,6 +31,20 @@
       href="assets/images/about.png"
       type="image/x-icon"
     />
+    
+    <!-- Embed -->
+    <meta name="title" content="Clubul de robotică Zenith" />
+    <meta name="description" content='FTC Team #19084. RO053 - "Grigore Moisil" National College, Bucharest, Romania.' />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://zenith.moisil.ro/" />
+    <meta property="og:title" content="Clubul de robotică Zenith" />
+    <meta property="og:description" content='FTC Team #19084. RO053 - "Grigore Moisil" National College, Bucharest, Romania.' />
+    <meta property="og:image" content="https://media.discordapp.net/attachments/1176151468852654111/1408149531752665198/IMG_0457.JPG?ex=68a8b0f2&is=68a75f72&hm=030840de068d8ae8c3f35fd557153f7e7211da5cae35cf41348740c32f8cf183&=&format=webp" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta content="#4517a3" data-react-helmet="true" name="theme-color" />
+
     <!-- Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
