--- a/index.html
+++ b/index.html
@@ -299,20 +299,7 @@
                 </div>
         </div>
 
-        <button onclick = 'seeanimationagain()'>Vezi animația din nou</button>
-        <!-- <div class="images">
-          <img
-            class="image-1"
-            src="assets/images/Branding Zenith/Sigla_SovaTech.png"
-            alt=""
-          />
-          <i class="bi bi-arrow-right"></i>
-          <img
-            class="image-2"
-            src="assets/images/Branding Zenith/Sigla_mov.png"
-            alt=""
-          />
-        </div> -->
+        <button id = "again" onclick = 'seeanimationagain()'>Vezi animația din nou</button>
       </div>
     </section>
 
