multiple quick fixes

--- a/echipa.html
+++ b/echipa.html
@@ -365,7 +365,7 @@
         </div>
         <div class="box box-mentor" data-name="programare-m">
           <img src="assets/images/Mentori/Ioan Stefan.JPG" alt="" />
-          <h2>Călin Crânguș</h2>
+          <h2>Ioan Ștefan</h2>
           <span>Mentor Programare</span>
         </div>
       </div>
