--- a/rezultate.html
+++ b/rezultate.html
@@ -242,7 +242,7 @@
       </div>
       <div class="card-s">
         <div class="card-content">
-          <div class="number" data-val="___">0</div>
+          <div class="number" data-val="15">0</div>
           <div class="card-name">Voluntari</div>
         </div>
         <div class="icon-box">
