--- a/en/index.html
+++ b/en/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="ro">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="assets/images/Icons/tab_icon.png" type="image/x-icon">
+    <link rel="icon" href="../assets/images/Icons/tab_icon.png" type="image/x-icon">
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -19,15 +19,15 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/navbar.css" />
-    <link rel="stylesheet" href="assets/css/footer.css" />
-    <link rel="stylesheet" href="assets/css/bttb.css" />
-    <link rel="stylesheet" href="assets/css/scroll-bar.css" />
-    <link rel="stylesheet" href="assets/css/sovazenith.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/navbar.css" />
+    <link rel="stylesheet" href="../assets/css/footer.css" />
+    <link rel="stylesheet" href="../assets/css/bttb.css" />
+    <link rel="stylesheet" href="../assets/css/scroll-bar.css" />
+    <link rel="stylesheet" href="../assets/css/sovazenith.css" />
     <link
       rel="shortcut icon"
-      href="assets/images/about.png"
+      href="../assets/images/about.png"
       type="image/x-icon"
     />
 
@@ -58,7 +58,7 @@
         <a class="navbar-brand me-auto" href=".">
           <img
             class="imagine-navbar"
-            src="assets/images/Branding Zenith/Sigla_mov.png"
+            src="../assets/images/Branding Zenith/Sigla_mov.png"
           />
         </a>
         <div
@@ -71,7 +71,7 @@
             <!--<h5 class="offcanvas-title" id="offcanvasNavbarLabel">
               <img
                 class="imagine-navbar"
-                src="assets/images/Branding Zenith/Sigla_mov.png"
+                src="../assets/images/Branding Zenith/Sigla_mov.png"
               />
             </h5>-->
             <button
@@ -92,22 +92,22 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="echipa.html">Echipă</a>
+                <a class="nav-link mx-lg-2" href="echipa.html">Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="blog.html">Activitate</a>
+                <a class="nav-link mx-lg-2" href="blog.html">Activity</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="rezultate.html">Rezultate</a>
+                <a class="nav-link mx-lg-2" href="rezultate.html">Results</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="sponsori.html">Sponsori</a>
+                <a class="nav-link mx-lg-2" href="sponsori.html">Sponsors</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="galerie.html">Galerie</a>
+                <a class="nav-link mx-lg-2" href="galerie.html">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="formular.html">Contact</a>
+                <a class="nav-link mx-lg-2" href="formular.html">Contact us</a>
               </li>
               <li>
                 <button id="theme-toggle" class="btn btn-sm" aria-label="Toggle dark mode">
@@ -174,15 +174,11 @@
       <div class="container-a">
         <div class="text-about">
           <div class="section-title">
-            <span class="custom-span"> Despre noi </span>
+            <span class="custom-span"> About us </span>
           </div>
           <div class="text-desc">
             <p>    
-              Zenith, echipa de robotică a Colegiului Național „Grigore Moisil”, este mai mult decât un club destinat tinerilor pasionați de tehnologie. 
-              Este o comunitate, dedicată inovației și creativității într-unul dintre cele mai fascinante domenii ale secolului nostru: robotica. 
-              Uniți de această pasiune comună, muncim zi de zi pentru a ajunge la un nivel cât mai înalt, participând la diverse concursuri naționale și internaționale. 
-              Pentru noi, Zenith a devenit un spațiu de dezvoltare personală și profesională, unde fiecare membru își aduce aportul unic, contribuind la succesul colectiv. 
-              Fiecare provocare este o oportunitate de a ne extinde cunoștințele și de a inova, iar sprijinul reciproc și colaborarea ne ajută să depășim orice obstacol și să evoluăm.
+              Zenith, the robotics team of "Grigore Moisil" National College, is more than just a club for young tech enthusiasts. It is a community, dedicated to innovation and creativity in one of the most fascinating areas of our century: robotics. United by this common passion, we work every day to reach the highest level, participating in various national and international competitions. For us, Zenith has become a space of personal and professional development, where each member brings their unique contribution, contributing to collective success. Every challenge is an opportunity to expand our knowledge and innovate, and mutual support and collaboration help us overcome any obstacle and evolve.
             </p>
           </div>
         </div>
@@ -203,11 +199,11 @@
       <div class="container-a">
         <div class="text-about">
           <div class="section-title">
-            <span class="custom-span"> Misiunea clubului </span>
+            <span class="custom-span"> The club's mission </span>
           </div>
           <div class="text-desc">
             <p>
-              Promovarea domeniului STEAM și a gândirii tehnice în rândul elevilor.
+              Promoting STEAM and technical thinking among students.
             </p>
           </div>
         </div>
@@ -219,7 +215,7 @@
       <div class="container-a">
         <div class="image-a">
           <img
-            src="assets/images/Echipa/Echipa_sezon_2025.jpg"
+            src="../assets/images/Echipa/Echipa_sezon_2025.jpg"
             alt=""
           />
         </div>
@@ -248,14 +244,14 @@
       <div class="container-b">
         <div class="text-branding">
           <p>
-            Povestea noastră începe în anul 2020, când, un grup de tineri din clasele a X-a și a XI-a de la Colegiul Național „Grigore Moisil” au înființat, cu ajutorul profesorului nostru coordonator, doamna profesor de fizică Mihaela Garabet, echipa SovaTech. Anii au trecut, iar membrii care au adus inițiativa de a se dezvolta în domeniul STEAM au devenit mentori, lăsând în urma lor o nouă generație care să perpetueze activitatea clubului. Noua generație, învăţând din greşelile seriei anterioare, a făcut un pas mai departe, aducând o nouă viziune în club și, astfel, şi-a propus să se reinventeze sub numele Zenith.
+            Our story begins in 2020, when a group of young people from the 10<sup>th</sup> and 11<sup>th</sup> grades of the "Grigore Moisil" National College set up the SovaTech team with the help of our coordinating teacher Mihaela Garabet. As the years passed, the members who brought the initiative to develop in the STEAM field became mentors, leaving behind a new generation to perpetuate the work of the club. The new members, learning from the mistakes of the previous series, moved on, bringing a new vision to the club and thus set out to reinvent itself under the name Zenith.
           </p>
         </div>
         <div class = 'tranzit-wrapper'>
             <div class = 'actual' id = 'fin'> 
                 <div id = 'sova' class = 'flx' style = 'transform: translateX(-50vw);'> 
                     <img style = 'width: max(100px, 100%) !important; height: auto;'
-                        src = "assets/images/Branding Zenith/Sigla_SovaTech.png"
+                        src = "../assets/images/Branding Zenith/Sigla_SovaTech.png"
                         alt = "SovaTech"
                         width = '1080' height = '1080'
                     >
@@ -264,7 +260,7 @@
                 <div class = 'flx lerpX'>
                     <img style = 'transform: scale(0);' 
                         id = 'arrow'
-                        src = 'assets/images/sageata.svg'
+                        src = '../assets/images/sageata.svg'
                         alt = 'arr'
                         width = '500' height = '500'
                     >
@@ -272,7 +268,7 @@
                 
                 <div id = 'zen' class = 'flx' style = 'transform: translateX(50vw);'> 
                     <img style = 'width: max(100px, 100%) !important; height: auto;'
-                        src = "assets/images/Branding Zenith/Sigla_mov.png"
+                        src = "../assets/images/Branding Zenith/Sigla_mov.png"
                         alt = "zenit"
                         width = '1080' height = '1080'
                     >
@@ -291,44 +287,42 @@
                 <div class = 'insidewrapper'>
                     <img style = 'width: min(70%, 500px); height: auto; '
                         class = 'soy'
-                        src = "assets/images/Branding Zenith/Sigla_SovaTech.png"
+                        src = "../assets/images/Branding Zenith/Sigla_SovaTech.png"
                         alt = "SovaTech"
                         width = '1080' height = '1080'
                     >
                 </div>
         </div>
 
-        <button id = "again" onclick = 'seeanimationagain()'>Vezi animația din nou</button>
+        <button id = "again" onclick = 'seeanimationagain()'>Play the animation again</button>
       </div>
     </section>
 
     <!-- Targets -->
     <div class="section-title">
-      <span class="custom-span"> Valorile noastre </span>
+      <span class="custom-span"> Our values </span>
     </div>
     <section class="targets">
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="obiectiv">
-              <h2 class="titlu">Colaborare</h2>
+              <h2 class="titlu">Collaboration</h2>
               <p class="paragraf">
-                Mediul de lucru colaborativ ne permite schimbul liber de idei,
-                împărtășirea cunoștințelor și dezvoltarea prieteniilor.
-                Meseriile viitorului se vor baza pe muncă în echipă, iar clubul
-                nostru promovează acest soft skill.
+                The collaborative working environment allows us to freely exchange ideas,
+                sharing knowledge and developing friendships.
+                The jobs of the future will be based on teamwork, and the club
+                our promote this skill.
               </p>
             </div>
           </div>
 
           <div class="swiper-slide">
             <div class="obiectiv">
-              <h2 class="titlu">Inovație</h2>
+              <h2 class="titlu">Innovation</h2>
               <p class="paragraf">
-                Prin intermediul proiectelor noastre vrem să aducem în prezent
-                generația inginerilor de mâine. Dorim să arătăm importanța și
-                puterea gândirii inovative și creative, susținute de
-                cunoștințele exacte.
+                Currently, we aim to shape the next generation of engineers. 
+                We wish to showcase the power and importance of innovative and creative thinking, backed by science.
               </p>
             </div>
           </div>
@@ -337,36 +331,34 @@
             <div class="obiectiv">
               <h2 class="titlu">Gracious professionalism</h2>
               <p class="paragraf">
-                Încurajarea unei competiții bazate pe respect și corectitudine,
-                în care scopul principal nu este câștigul, ci ajutor reciproc.
-                Astfel, performanța devine un pretext pentru dezvoltarea
-                personală și profesională a participanților.
+                Gracious proffesionalism is based on encouraging competition based on respect and fairness
+                where the main goal is not gain, but mutual help.
+                Thus, performance becomes a pretext for the personal and professional development
+                of the participants.
               </p>
             </div>
           </div>
 
           <div class="swiper-slide">
             <div class="obiectiv">
-              <h2 class="titlu">Responsabilitate</h2>
+              <h2 class="titlu">Responsibility</h2>
               <p class="paragraf">
-                Această valoare stă la baza planificării și organizării
-                activităților noastre, dar și la stabilirea obiectivelor pe
-                termen scurt și lung, obținând astfel rezultatul dorit.
-                Responsabilitatea în cadrul clubului este esențială, calitate
-                necesară oricărui adult în devenire.
+                This value is the basis of planning and organizing
+                our activities, whilst setting objectives in the 
+                short or long term, thus achieving our desired result.
+                This quality is essential for our club, as it
+                may help us develop a good mindset for later on through adulthood.
               </p>
             </div>
           </div>
 
           <div class="swiper-slide">
             <div class="obiectiv">
-              <h2 class="titlu">Perseverență</h2>
+              <h2 class="titlu">Perseverance</h2>
               <p class="paragraf">
-                Dorința noastră este de a progresa și de a ne îmbunătăți
-                activitatea, învățând ceva util din fiecare zi. Doar prin
-                perseverență vom putea ajunge la performanța dorită și tocmai de
-                aceea considerăm că aceasta este una dintre valorile definitorii
-                ale echipei noastre.
+                We wish to progress and improve our activity, learning something useful every day. 
+                Only through perseverance will we get to our desired performance, 
+                which is why we consider this trait one of our defining values.
               </p>
             </div>
           </div>
@@ -376,7 +368,7 @@
 
     <!-- Plans -->
     <div class="section-title">
-      <span class="custom-span"> Planuri de viitor </span>
+      <span class="custom-span"> Future plans </span>
     </div>
     <div class="container-p">
       <div class="box-container" id="dynamic-content">
@@ -460,10 +452,10 @@
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-    <script src="./assets/js/script.js"></script>
-    <script src="./assets/js/bttb.js"></script>
-    <script src="./assets/js/hexagoane.js"></script>
-    <script src="./assets/js/sovazenith.js"></script>
-    <script src="./assets/js/dark_mode.js"></script>
+    <script src="js/script.js"></script>
+    <script src="../assets/js/bttb.js"></script>
+    <script src="../assets/js/hexagoane.js"></script>
+    <script src="../assets/js/sovazenith.js"></script>
+    <script src="js/dark_mode.js"></script>
   </body>
 </html>
