echipa.html - english version OUT

--- a/en/echipa.html
+++ b/en/echipa.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" href="assets/images/Icons/tab_icon.png" type="image/x-icon">
+    <link rel="icon" href="../assets/images/Icons/tab_icon.png" type="image/x-icon">
     
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -20,15 +20,15 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/bttb.css" />
-    <link rel="stylesheet" href="assets/css/echipa.css" />
-    <link rel="stylesheet" href="assets/css/navbar.css" />
-    <link rel="stylesheet" href="assets/css/footer.css" />
-    <link rel="stylesheet" href="assets/css/scroll-bar.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/bttb.css" />
+    <link rel="stylesheet" href="../assets/css/echipa.css" />
+    <link rel="stylesheet" href="../assets/css/navbar.css" />
+    <link rel="stylesheet" href="../assets/css/footer.css" />
+    <link rel="stylesheet" href="../assets/css/scroll-bar.css" />
     <link
       rel="shortcut icon"
-      href="assets/images/about.png"
+      href="../assets/images/about.png"
       type="image/x-icon"
     />
 
@@ -59,7 +59,7 @@
         <a class="navbar-brand me-auto" href="."
           ><img
             class="imagine-navbar"
-            src="assets/images/Branding Zenith/Sigla_mov.png"
+            src="../assets/images/Branding Zenith/Sigla_mov.png"
         /></a>
         <div
           class="offcanvas offcanvas-end"
@@ -71,7 +71,7 @@
             <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
               <img
                 class="imagine-navbar"
-                src="assets/images/Branding Zenith/Sigla_mov.png"
+                src="../assets/images/Branding Zenith/Sigla_mov.png"
               />
             </h5>
             <button
@@ -90,22 +90,22 @@
                 <a
                   class="nav-link mx-lg-2 active"
                   aria-current="page"
-                  href="echipa.html">Echipă</a>
+                  href="echipa.html">Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="blog.html">Activitate</a>
+                <a class="nav-link mx-lg-2" href="blog.html">Activity</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="rezultate.html">Rezultate</a>
+                <a class="nav-link mx-lg-2" href="rezultate.html">Results</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="sponsori.html">Sponsori</a>
+                <a class="nav-link mx-lg-2" href="sponsori.html">Sponsors</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="galerie.html">Galerie</a>
+                <a class="nav-link mx-lg-2" href="galerie.html">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="formular.html">Contact</a>
+                <a class="nav-link mx-lg-2" href="formular.html">Contact us</a>
               </li>
               <li>
                 <button id="theme-toggle" class="btn btn-sm" aria-label="Toggle dark mode">
@@ -131,202 +131,202 @@
     <section class="about-us">
       <div class="container-a">
         <div class="image-a">
-          <img src="assets/images/Echipa/IMG_0437.JPG" alt="" />
+          <img src="../assets/images/Echipa/IMG_0437.JPG" alt="" />
         </div>
       </div>
     </section>
 
     <section>
       <div style = 'display: flex; justify-content: space-evenly; align-items: center; flex-wrap: wrap; gap: 1em;'>
-        <a class = 'selection-link' href = '#membri'>Membri</a>
-        <a class = 'selection-link' href = '#voluntari'>Voluntari</a>
-        <a class = 'selection-link' href = '#mentori'>Mentori</a>
+        <a class = 'selection-link' href = '#membri'>Members</a>
+        <a class = 'selection-link' href = '#voluntari'>Volunteers</a>
+        <a class = 'selection-link' href = '#mentori'>Mentors</a>
       </div>
     </section>
 
     <!-- Echipa -->
     <div id = 'membri' class="team-area">
       <div class="section-title">
-        <span class="custom-span"> Membrii echipei </span>
+        <span class="custom-span"> Team members </span>
       </div>
       <div class="item-links">
-        <span class="item-link item-membru menu-active" data-name="all">Toți membrii</span>
-        <span class="item-link item-membru" data-name="mecanica">Mecanică</span>
-        <span class="item-link item-membru" data-name="programare">Programare</span>
+        <span class="item-link item-membru menu-active" data-name="all">All members</span>
+        <span class="item-link item-membru" data-name="mecanica">Robot building</span>
+        <span class="item-link item-membru" data-name="programare">Programming</span>
         <span class="item-link item-membru" data-name="grafica">PR & Marketing</span>
-        <span class="item-link item-membru" data-name="pr">Grafică</span>
+        <span class="item-link item-membru" data-name="pr">Graphics Design</span>
       </div>
 
       <!-- !!! data-name trebuie sa fie exact ca cele de aici de sus !!! -->
       <div class="team-box">
         <!-- Membru 1 -->
         <div class="box box-membru" data-name="mecanica">
-          <img src="assets/images/Membri/Lucian Bobîrsc.JPG" alt="" />
+          <img src="../assets/images/Membri/Lucian Bobîrsc.JPG" alt="" />
           <h2>Lucian Bobîrsc</h2>
-          <span>Lider Mecanică</span>
+          <span>Robot building Leader</span>
         </div>
         <!-- Membru 2 -->
         <div class="box box-membru" data-name="mecanica">
-          <img src="assets/images/Membri/Matei Neamțu.JPG" alt="" />
+          <img src="../assets/images/Membri/Matei Neamțu.JPG" alt="" />
           <h2>Matei Neamțu</h2>
-          <span>Mecanică</span>
+          <span>Robot building</span>
         </div>
         <!-- Membru 3 -->
         <div class="box box-membru" data-name="mecanica">
-          <img src="assets/images/Membri/Alex Velea.JPG" alt="" />
+          <img src="../assets/images/Membri/Alex Velea.JPG" alt="" />
           <h2>Alex Velea</h2>
-          <span>Mecanică</span>
+          <span>Robot building</span>
         </div>
         <!-- Membru 4 -->
         <div class="box box-membru" data-name="mecanica">
-          <img src="assets/images/Membri/Călin Tudor.JPG" alt="" />
+          <img src="../assets/images/Membri/Călin Tudor.JPG" alt="" />
           <h2>Călin Tudor</h2>
-          <span>Mecanică</span>
+          <span>Robot building</span>
         </div>
         <!-- Membru 5 -->
         <div class="box box-membru" data-name="mecanica">
-          <img src="assets/images/Membri/Robert Ciocan.JPG" alt="" />
+          <img src="../assets/images/Membri/Robert Ciocan.JPG" alt="" />
           <h2>Robert Ciocan </h2>
-          <span>Mecanică</span>
+          <span>Robot building</span>
         </div>
         <!-- Membru 6 -->
         <div class="box box-membru" data-name="programare">
-          <img src="assets/images/Membri/Bogdan Grecu.JPG" alt="" />
+          <img src="../assets/images/Membri/Bogdan Grecu.JPG" alt="" />
           <h2>Bogdan Grecu</h2>
-          <span>Lider Programare</span>
+          <span>Programming Leader</span>
         </div>
         <!-- Membru 7 -->
         <div class="box box-membru" data-name="grafica">
-          <img src="assets/images/Membri/Irina Nicolescu.JPG" alt="" />
+          <img src="../assets/images/Membri/Irina Nicolescu.JPG" alt="" />
           <h2>Irina Nicolescu</h2>
-          <span>Lider PR & Marketing</span>
+          <span>PR & Marketing Leader</span>
         </div>
         <!-- Membru 8 -->
         <div class="box box-membru" data-name="grafica">
-          <img src="assets/images/Membri/Catinca Drăghiescu.JPG" alt="" />
+          <img src="../assets/images/Membri/Catinca Drăghiescu.JPG" alt="" />
           <h2>Catinca Drăghiescu</h2>
           <span>PR & Marketing</span>
         </div>
         <!-- Membru 9 -->
         <div class="box box-membru" data-name="grafica">
-          <img src="assets/images/Membri/Denisa Ionescu.JPG" alt="" />
+          <img src="../assets/images/Membri/Denisa Ionescu.JPG" alt="" />
           <h2>Denisa Ionescu</h2>
           <span>PR & Marketing</span>
         </div>
         <!-- Membru 10 -->
         <div class="box box-membru" data-name="pr">
-          <img src="assets/images/Membri/Iasmina Petcu.JPG" alt="" />
+          <img src="../assets/images/Membri/Iasmina Petcu.JPG" alt="" />
           <h2>Iasmina Petcu</h2>
-          <span>Lider Grafică</span>
+          <span>Graphics design Leader</span>
         </div>
         <!-- Membru 11 -->
         <div class="box box-membru" data-name="pr">
-          <img src="assets/images/Membri/Maria Răducanu.JPG" alt="" />
+          <img src="../assets/images/Membri/Maria Răducanu.JPG" alt="" />
           <h2>Maria Răducanu</h2>
-          <span>Grafică</span>
+          <span>Graphics design</span>
         </div>
       </div>
     </div>
 
-    <!-- Voluntari -->
+    <!-- Volunteeri -->
     <div id = 'voluntari' class="team-area">
       <div class="section-title">
-        <span class="custom-span"> Voluntarii echipei </span>
+        <span class="custom-span"> Team volunteers </span>
       </div>
       <div class="item-links">
-        <span class="item-link item-voluntar menu-active-v" data-name="all-v">Toți voluntarii</span>
-        <span class="item-link item-voluntar" data-name="mecanica-v">Mecanică</span>
-        <span class="item-link item-voluntar" data-name="programare-v">Programare</span>
+        <span class="item-link item-voluntar menu-active-v" data-name="all-v">All volunteers</span>
+        <span class="item-link item-voluntar" data-name="mecanica-v">Robot building</span>
+        <span class="item-link item-voluntar" data-name="programare-v">Programming</span>
         <span class="item-link item-voluntar" data-name="pr-v">PR & Marketing</span>
-        <span class="item-link item-voluntar" data-name="grafica-v">Grafică</span>
+        <span class="item-link item-voluntar" data-name="grafica-v">Graphics design</span>
       </div>
 
       <!-- !!! data-name trebuie sa fie exact ca cele de aici de sus !!! -->
       <div class="team-box">
         <div class="box box-voluntar" data-name="mecanica-v">
-          <img src="assets/images/Voluntari/Tudor Danciu.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Tudor Danciu.JPG" alt="" />
           <h2>Tudor Danciu</h2>
-          <span>Voluntar Mecanică</span>
+          <span>Robot building Volunteer</span>
         </div>
         <div class="box box-voluntar" data-name="mecanica-v">
-          <img src="assets/images/Voluntari/Matei Jugureanu.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Matei Jugureanu.JPG" alt="" />
           <h2>Matei Jugureanu</h2>
-          <span>Voluntar Mecanică</span>
+          <span>Robot building Volunteer</span>
         </div>
         <div class="box box-voluntar" data-name="mecanica-v">
-          <img src="assets/images/Voluntari/Mihai Roman.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Mihai Roman.JPG" alt="" />
           <h2>Mihai Roman</h2>
-          <span>Voluntar Mecanică</span>
+          <span>Robot building Volunteer</span>
         </div>
         <div class="box box-voluntar" data-name="mecanica-v">
-          <img src="assets/images/Voluntari/Radu Borca.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Radu Borca.JPG" alt="" />
           <h2>Radu Borca</h2>
-          <span>Voluntar Mecanică</span>
+          <span>Robot building Volunteer</span>
         </div>
         <div class="box box-voluntar" data-name="mecanica-v">
-          <img src="assets/images/Voluntari/Radu Indolean.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Radu Indolean.JPG" alt="" />
           <h2>Radu Indolean</h2>
-          <span>Voluntar Mecanică</span>
+          <span>Robot building Volunteer</span>
         </div>
         <div class="box box-voluntar" data-name="mecanica-v">
-          <img src="assets/images/Voluntari/Rares Calugaru.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Rares Calugaru.JPG" alt="" />
           <h2>Rareș Călugăru</h2>
-          <span>Voluntar Mecanică</span>
+          <span>Robot building Volunteer</span>
         </div>
         <div class="box box-voluntar" data-name="mecanica-v">
-          <img src="assets/images/Voluntari/Razvan Dragomir.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Razvan Dragomir.JPG" alt="" />
           <h2>Răzvan Dragomir</h2>
-          <span>Voluntar Mecanică</span>
+          <span>Robot building Volunteer</span>
         </div>
         <div class="box box-voluntar" data-name="programare-v">
-          <img src="assets/images/Voluntari/Filip Tiron.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Filip Tiron.JPG" alt="" />
           <h2>Filip Tiron</h2>
-          <span>Voluntar Programare</span>
+          <span>Programming Volunteer</span>
         </div>
         <div class="box box-voluntar" data-name="programare-v">
-          <img src="assets/images/Voluntari/Alexandru Tigau.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Alexandru Tigau.JPG" alt="" />
           <h2>Alexandru Țigău</h2>
-          <span>Voluntar Programare</span>
+          <span>Programming Volunteer</span>
         </div>
         <div class="box box-voluntar" data-name="pr-v">
-          <img src="assets/images/Voluntari/Maya Danilov.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Maya Danilov.JPG" alt="" />
           <h2>Maya Danilov</h2>
-          <span>Voluntar PR & Marketing</span>
+          <span>PR & Marketing Volunteer</span>
         </div>
         <div class="box box-voluntar" data-name="pr-v">
-          <img src="assets/images/Voluntari/Iasmine.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Iasmine.JPG" alt="" />
           <h2>Iasmine Adumitroaei</h2>
-          <span>Voluntar PR & Marketing</span>
+          <span>PR & Marketing Volunteer</span>
         </div>
         <div class="box box-voluntar" data-name="pr-v">
-          <img src="assets/images/Voluntari/Razvan Glaje.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Razvan Glaje.JPG" alt="" />
           <h2>Răzvan Glaje</h2>
-          <span>Voluntar PR & Marketing</span>
+          <span>PR & Marketing Volunteer</span>
         </div>
         <div class="box box-voluntar" data-name="grafica-v">
-          <img src="assets/images/Voluntari/Nicolle Stefanescu.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Nicolle Stefanescu.JPG" alt="" />
           <h2>Nicolle Ștefănescu</h2>
-          <span>Voluntar Grafică</span>
+          <span>Graphics design Volunteer</span>
         </div>
         <div class="box box-voluntar" data-name="grafica-v">
-          <img src="assets/images/Voluntari/Isabella.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Isabella.JPG" alt="" />
           <h2>Isabela Ilie</h2>
-          <span>Voluntar Grafică</span>
+          <span>Graphics design Volunteer</span>
         </div>
         <div class="box box-voluntar" data-name="grafica-v">
-          <img src="assets/images/Voluntari/Ana Pechi.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Ana Pechi.JPG" alt="" />
           <h2>Ana Pechi</h2>
-          <span>Voluntar Grafică</span>
+          <span>Graphics design Volunteer</span>
         </div>
         <div class="box box-voluntar" data-name="grafica-v">
-          <img src="assets/images/Voluntari/Crina Androne.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Crina Androne.JPG" alt="" />
           <h2>Crina Andone</h2>
-          <span>Voluntar Grafică</span>
+          <span>Graphics design Volunteer</span>
         </div>
         <div class="box box-voluntar" data-name="grafica-v">
-          <img src="assets/images/Voluntari/Oana Ursache.JPG" alt="" />
+          <img src="../assets/images/Voluntari/Oana Ursache.JPG" alt="" />
           <h2>Oana Ursache</h2>
-          <span>Voluntar Grafică</span>
+          <span>Graphics design Volunteer</span>
         </div>
 
       </div>
@@ -335,38 +335,38 @@
     <!-- Mentori -->
     <div id = 'mentori' class="team-area">
       <div class="section-title">
-        <span class="custom-span"> Mentorii echipei </span>
+        <span class="custom-span"> Team mentors </span>
       </div>
 
       <!-- !!! data-name trebuie sa fie exact ca cele de aici de sus !!! -->
       <div class="team-box">
         <!-- Membru 1 -->
         <div class="box box-mentor" data-name="mecanica-m">
-          <img src="assets/images/Mentori/Ioana Preda.JPG" alt="" />
+          <img src="../assets/images/Mentori/Ioana Preda.JPG" alt="" />
           <h2>Ioana Preda</h2>
-          <span>Mentor Mecanică</span>
+          <span>Robot building Mentor</span>
         </div>
         <!-- Membru 2 -->
         <div class="box box-mentor" data-name="mecanica-m">
-          <img src="assets/images/Mentori/Serghei Țirulnic.JPG" alt="" />
+          <img src="../assets/images/Mentori/Serghei Țirulnic.JPG" alt="" />
           <h2>Serghei Țirulnic</h2>
-          <span>Mentor Mecanică</span>
+          <span>Robot building Mentor</span>
         </div>
         <!-- Membru 3 -->
         <div class="box box-mentor" data-name="mecanica-m">
-          <img src="assets/images/Mentori/Ionuț Ghiță.JPG" alt="" />
+          <img src="../assets/images/Mentori/Ionuț Ghiță.JPG" alt="" />
           <h2>Ionuț Ghiță</h2>
-          <span>Mentor Mecanică</span>
+          <span>Robot building Mentor</span>
         </div>
         <div class="box box-mentor" data-name="programare-m">
-          <img src="assets/images/Mentori/Călin Crânguș.JPG" alt="" />
+          <img src="../assets/images/Mentori/Călin Crânguș.JPG" alt="" />
           <h2>Călin Crânguș</h2>
-          <span>Mentor Programare</span>
+          <span>Programming Mentor</span>
         </div>
         <div class="box box-mentor" data-name="programare-m">
-          <img src="assets/images/Mentori/Ioan Stefan.JPG" alt="" />
+          <img src="../assets/images/Mentori/Ioan Stefan.JPG" alt="" />
           <h2>Ioan Ștefan</h2>
-          <span>Mentor Programare</span>
+          <span>Programming Mentor</span>
         </div>
       </div>
     </div>
@@ -445,9 +445,9 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/js/navbar.js"></script>
-    <script src="./assets/js/echipa.js"></script>
-    <script src="./assets/js/bttb.js"></script>
-    <script src="./assets/js/dark_mode.js"></script>
+    <script src="../assets/js/navbar.js"></script>
+    <script src="../assets/js/echipa.js"></script>
+    <script src="../assets/js/bttb.js"></script>
+    <script src="js/dark_mode.js"></script>
   </body>
 </html>
