rezultate.html - english version OUT

--- a/rezultate.html
+++ b/rezultate.html
@@ -182,7 +182,7 @@
       <div class="card-s">
         <div class="card-content">
           <div class="number" data-val="15">0</div>
-          <div class="card-name">Evenimente orgaizate</div>
+          <div class="card-name">Evenimente organizate</div>
         </div>
         <div class="icon-box">
           <img
