--- a/en/rezultate.html
+++ b/en/rezultate.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="icon" href="assets/images/Icons/tab_icon.png" type="image/x-icon">
+    <link rel="icon" href="../assets/images/Icons/tab_icon.png" type="image/x-icon">
     
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -20,15 +20,15 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/bttb.css" />
-    <link rel="stylesheet" href="assets/css/rezultate.css" />
-    <link rel="stylesheet" href="assets/css/navbar.css" />
-    <link rel="stylesheet" href="assets/css/footer.css" />
-    <link rel="stylesheet" href="assets/css/scroll-bar.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/bttb.css" />
+    <link rel="stylesheet" href="../assets/css/rezultate.css" />
+    <link rel="stylesheet" href="../assets/css/navbar.css" />
+    <link rel="stylesheet" href="../assets/css/footer.css" />
+    <link rel="stylesheet" href="../assets/css/scroll-bar.css" />
     <link
       rel="shortcut icon"
-      href="assets/images/about.png"
+      href="../assets/images/about.png"
       type="image/x-icon"
     />
     
@@ -59,7 +59,7 @@
         <a class="navbar-brand me-auto" href="."
           ><img
             class="imagine-navbar"
-            src="assets/images/Branding Zenith/Sigla_mov.png"
+            src="../assets/images/Branding Zenith/Sigla_mov.png"
         /></a>
         <div
           class="offcanvas offcanvas-end"
@@ -71,7 +71,7 @@
             <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
               <img
                 class="imagine-navbar"
-                src="assets/images/Branding Zenith/Sigla_mov.png"
+                src="../assets/images/Branding Zenith/Sigla_mov.png"
               />
             </h5>
             <button
@@ -87,25 +87,25 @@
                 <a class="nav-link mx-lg-2" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="echipa.html">Echipă</a>
+                <a class="nav-link mx-lg-2" href="echipa.html">Team</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="blog.html">Activitate</a>
+                <a class="nav-link mx-lg-2" href="blog.html">Activity</a>
               </li>
               <li class="nav-item">
                 <a
                   class="nav-link mx-lg-2 active"
                   aria-current="page"
-                  href="rezultate.html">Rezultate</a>
+                  href="rezultate.html">Results</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="sponsori.html">Sponsori</a>
+                <a class="nav-link mx-lg-2" href="sponsori.html">Sponsors</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="galerie.html">Galerie</a>
+                <a class="nav-link mx-lg-2" href="galerie.html">Gallery</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="formular.html">Contact</a>
+                <a class="nav-link mx-lg-2" href="formular.html">Contact us</a>
               </li>
               <li>
                 <button id="theme-toggle" class="btn btn-sm" aria-label="Toggle dark mode">
@@ -132,21 +132,21 @@
       <div class="card-s">
         <div class="card-content">
           <div class="number" data-val="43">00</div>
-          <div class="card-name">Membri în club</div>
+          <div class="card-name">Club members</div>
         </div>
         <div class="icon-box">
-          <img class="iconita" src="assets/images/Icons/Membri.png" alt="" />
+          <img class="iconita" src="../assets/images/Icons/Membri.png" alt="" />
         </div>
       </div>
       <div class="card-s">
         <div class="card-content">
           <div class="number" data-val="5">0</div>
-          <div class="card-name">Ani de experiență</div>
+          <div class="card-name">Years of experience</div>
         </div>
         <div class="icon-box">
           <img
             class="iconita"
-            src="assets/images/Icons/Ani_de_experienta__1_.png"
+            src="../assets/images/Icons/Ani_de_experienta__1_.png"
             alt=""
           />
         </div>
@@ -160,7 +160,7 @@
         <div class="icon-box">
           <img
             class="iconita"
-            src="assets/images/Icons/Parteneri.png"
+            src="../assets/images/Icons/Parteneri.png"
             alt=""
           />
         </div>
@@ -169,12 +169,12 @@
       <div class="card-s">
         <div class="card-content">
           <div class="number" data-val="14">0</div>
-          <div class="card-name">Sponsori & parteneri</div>
+          <div class="card-name">Sponsors & partners</div>
         </div>
         <div class="icon-box">
           <img
             class="iconita"
-            src="assets/images/Icons/Sponsori__2_.png"
+            src="../assets/images/Icons/Sponsori__2_.png"
             alt=""
           />
         </div>
@@ -182,12 +182,12 @@
       <div class="card-s">
         <div class="card-content">
           <div class="number" data-val="15">0</div>
-          <div class="card-name">Evenimente orgaizate</div>
+          <div class="card-name">Eveniments organized</div>
         </div>
         <div class="icon-box">
           <img
             class="iconita"
-            src="assets/images/Icons/Evenimente_organizate.png"
+            src="../assets/images/Icons/Evenimente_organizate.png"
             alt=""
           />
         </div>
@@ -195,12 +195,12 @@
       <div class="card-s">
         <div class="card-content">
           <div class="number" data-val="48">00</div>
-          <div class="card-name">Participare evenimente</div>
+          <div class="card-name">Events attended</div>
         </div>
         <div class="icon-box">
           <img
             class="iconita"
-            src="assets/images/Icons/Participare_evenimente.png"
+            src="../assets/images/Icons/Participare_evenimente.png"
             alt=""
           />
         </div>
@@ -208,21 +208,21 @@
       <div class="card-s">
         <div class="card-content">
           <div class="number-special" data-val="6100">000</div>
-          <div class="card-name">Tineri din comunitate</div>
+          <div class="card-name">Community members</div>
         </div>
         <div class="icon-box">
-          <img class="iconita" src="assets/images/Icons/Comunitate__2_.png" alt="" />
+          <img class="iconita" src="../assets/images/Icons/Comunitate__2_.png" alt="" />
         </div>
       </div>
       <div class="card-s">
         <div class="card-content">
           <div class="number" data-val="15">0</div>
-          <div class="card-name">Concursuri</div>
+          <div class="card-name">Contests</div>
         </div>
         <div class="icon-box">
           <img
             class="iconita"
-            src="assets/images/Icons/Concursuri__1_.png"
+            src="../assets/images/Icons/Concursuri__1_.png"
             alt=""
           />
         </div>
@@ -230,12 +230,12 @@
       <div class="card-s">
         <div class="card-content">
           <div class="number" data-val="11">0</div>
-          <div class="card-name">Membri</div>
+          <div class="card-name">Members</div>
         </div>
         <div class="icon-box">
           <img
             class="iconita"
-            src="assets/images/Icons/Membri.png"
+            src="../assets/images/Icons/Membri.png"
             alt=""
           />
         </div>
@@ -243,12 +243,12 @@
       <div class="card-s">
         <div class="card-content">
           <div class="number" data-val="15">0</div>
-          <div class="card-name">Voluntari</div>
+          <div class="card-name">Volunteers</div>
         </div>
         <div class="icon-box">
           <img
             class="iconita"
-            src="assets/images/Icons/Membri.png"
+            src="../assets/images/Icons/Membri.png"
             alt=""
           />
         </div>
@@ -256,12 +256,12 @@
       <div class="card-s">
         <div class="card-content">
           <div class="number" data-val="5">0</div>
-          <div class="card-name">Mentori</div>
+          <div class="card-name">Mentors</div>
         </div>
         <div class="icon-box">
           <img
             class="iconita"
-            src="assets/images/Icons/Membri.png"
+            src="../assets/images/Icons/Membri.png"
             alt=""
           />
         </div>
@@ -270,148 +270,145 @@
 
     <!-- Timeline -->
     <div class="timeline">
-      <h5 class="heading">Rezultatele noastre</h5>
+      <h5 class="heading">Our results</h5>
       <div class="container-r">
         <ul>
-          <!-- Rezultat 5 -->
+          <!-- Result 5 -->
           <li>
             <div class="timeline-container">
               <img
-                      src="assets/images/Branding diverse proiecte/Tabara_Timisoara_-_transparenta.png"
-                      class="timeline-image"
+                src="../assets/images/Branding diverse proiecte/Tabara_Timisoara_-_transparenta.png"
+                class="timeline-image"
               />
               <div class="timeline-text">
                 <h3 class="title-r">Finalist Alliance</h3>
                 <p>
-                  În cadrul taberei de vară Open Robotics Intelligent Grid de la
-                  Timișoara, organizată de Facultatea de Vest din Timișoara în
-                  colaborare cu echipa de robotică CSH, am ajuns până în finale, plasându-ne în
-                  clasament pe locul II.
+                  During the Open Robotics Intelligent Grid summer camp in Timișoara,
+                  organized by the West University of Timișoara in collaboration with
+                  the CSH robotics team, we reached the finals, placing 2nd overall.
                 </p>
               </div>
             </div>
             <img
-                    src="assets/images/Branding Zenith/Stea_Zenith.png"
-                    class="point"
+              src="../assets/images/Branding Zenith/Stea_Zenith.png"
+              class="point"
             />
             <img
-                    src="assets/images/Branding Zenith/Stea_Zenith__1_.png"
-                    class="point-2"
+              src="../assets/images/Branding Zenith/Stea_Zenith__1_.png"
+              class="point-2"
             />
-            <span class="date">Septembrie 2024</span>
+            <span class="date">September 2024</span>
           </li>
-          <!-- Rezultat 4 -->
+          <!-- Result 4 -->
           <li>
             <div class="timeline-container">
               <img
-                src="assets/images/Branding sezoane/Center_Stage__2_.png"
+                src="../assets/images/Branding sezoane/Center_Stage__2_.png"
                 class="timeline-image"
               />
               <div class="timeline-text">
                 <h3 class="title-r">Motivate Award III</h3>
                 <p>
-                  În cadrul sezonului 2023-2024 al competiției internaționale de
-                  robotică FIRST Tech Challenge, la etapa regională din
-                  București, am obținut premiul Motivate Award, locul III.
-                  Acesta indică implicarea deosebită a echipei noastre în
-                  comunitatea concursului prin promovarea valorilor FIRST, cum
-                  ar fi Gracious Professionalism.
+                  In the 2023-2024 season of the international robotics competition
+                  FIRST Tech Challenge, at the regional stage in Bucharest, we won the
+                  Motivate Award, 3rd place. This award highlights our team’s strong
+                  involvement in the competition community through the promotion of
+                  FIRST values, such as Gracious Professionalism.
                 </p>
               </div>
             </div>
             <img
-              src="assets/images/Branding Zenith/Stea_Zenith.png"
+              src="../assets/images/Branding Zenith/Stea_Zenith.png"
               class="point"
             />
             <img
-              src="assets/images/Branding Zenith/Stea_Zenith__1_.png"
+              src="../assets/images/Branding Zenith/Stea_Zenith__1_.png"
               class="point-2"
             />
-            <span class="date">Ianuarie 2024</span>
+            <span class="date">January 2024</span>
           </li>
-          <!-- Rezultat 3 -->
+          <!-- Result 3 -->
           <li>
             <div class="timeline-container">
               <img
-                src="assets/images/Branding diverse proiecte/Tabara_Timisoara_-_transparenta.png"
+                src="../assets/images/Branding diverse proiecte/Tabara_Timisoara_-_transparenta.png"
                 class="timeline-image"
               />
               <div class="timeline-text">
                 <h3 class="title-r">Winning Alliance</h3>
                 <p>
-                  În cadrul taberei de vară Open Robotics Intelligent Grid de la
-                  Timișoara, organizată de Facultatea de Vest din Timișoara în
-                  colaborare cu echipa de robotică CSH, am făcut parte din
-                  alianța câștigătoare, întorcându-ne acasă cu premiul cel mare.
+                  During the Open Robotics Intelligent Grid summer camp in Timișoara,
+                  organized by the West University of Timișoara in collaboration with
+                  the CSH robotics team, we were part of the winning alliance,
+                  returning home with the grand prize.
                 </p>
               </div>
             </div>
             <img
-              src="assets/images/Branding Zenith/Stea_Zenith.png"
+              src="../assets/images/Branding Zenith/Stea_Zenith.png"
               class="point"
             />
             <img
-              src="assets/images/Branding Zenith/Stea_Zenith__1_.png"
+              src="../assets/images/Branding Zenith/Stea_Zenith__1_.png"
               class="point-2"
             />
-            <span class="date">Septembrie 2023</span>
+            <span class="date">September 2023</span>
           </li>
-          <!-- Rezultat 2 -->
+          <!-- Result 2 -->
           <li>
             <div class="timeline-container">
               <img
-                src="assets/images/Branding sezoane/Freight_Frenzy__3_.png"
+                src="../assets/images/Branding sezoane/Freight_Frenzy__3_.png"
                 class="timeline-image"
               />
               <div class="timeline-text">
                 <h3 class="title-r">Design Award III</h3>
                 <p>
-                  În anul sezonul 2021-2022 al competiției internaționale de
-                  robotică FIRST Tech Challenge, echipa noastră, sub numele de
-                  SovaTech, a primit premiul Design Award, locul III, la etapa
-                  regională din București, pentru integrarea elementelor de
-                  design industrial, în mod funcțional și estetic, în aspectul
-                  robotului realizat.
+                  In the 2021-2022 season of the international robotics competition
+                  FIRST Tech Challenge, our team, under the name SovaTech, received
+                  the Design Award, 3rd place, at the regional stage in Bucharest. The
+                  award recognized the functional and aesthetic integration of
+                  industrial design elements in our robot’s appearance.
                 </p>
               </div>
             </div>
             <img
-              src="assets/images/Branding Zenith/Stea_Zenith.png"
+              src="../assets/images/Branding Zenith/Stea_Zenith.png"
               class="point"
             />
             <img
-              src="assets/images/Branding Zenith/Stea_Zenith__1_.png"
+              src="../assets/images/Branding Zenith/Stea_Zenith__1_.png"
               class="point-2"
             />
-            <span class="date">Ianuarie 2022</span>
+            <span class="date">January 2022</span>
           </li>
-          <!-- Rezultat 1 -->
+          <!-- Result 1 -->
           <li>
             <div class="timeline-container">
               <img
-                src="assets/images/Branding sezoane/Ultimate_Goal.png"
+                src="../assets/images/Branding sezoane/Ultimate_Goal.png"
                 class="timeline-image"
               />
               <div class="timeline-text">
                 <h3 class="title-r">Think Award II</h3>
                 <p>
-                  În cadrul sezonului 2020-2021 al competiției internaționale de
-                  robotică FIRST Tech Challenge, clubul nostru, cu numele de
-                  SovaTech, a obținut premiul Think Award, locul II, la etapa
-                  regională din București, acordat pentru caietul tehnic creat
-                  care a prezentat în mod exemplar robotul și strategia de joc.
+                  In the 2020-2021 season of the international robotics competition
+                  FIRST Tech Challenge, our club, under the name SovaTech, won the
+                  Think Award, 2nd place, at the regional stage in Bucharest. The
+                  award was granted for our engineering notebook, which presented the
+                  robot and game strategy in an exemplary manner.
                 </p>
               </div>
             </div>
             <img
-              src="assets/images/Branding Zenith/Stea_Zenith.png"
+              src="../assets/images/Branding Zenith/Stea_Zenith.png"
               class="point"
             />
             <img
-              src="assets/images/Branding Zenith/Stea_Zenith__1_.png"
+              src="../assets/images/Branding Zenith/Stea_Zenith__1_.png"
               class="point-2"
             />
-            <span class="date">Ianuarie 2021</span>
+            <span class="date">January 2021</span>
           </li>
         </ul>
       </div>
@@ -491,9 +488,9 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./assets/js/navbar.js"></script>
-    <script src="./assets/js/rezultate.js"></script>
-    <script src="./assets/js/bttb.js"></script>
-    <script src="./assets/js/dark_mode.js"></script>
+    <script src="./../assets/js/navbar.js"></script>
+    <script src="./../assets/js/rezultate.js"></script>
+    <script src="./../assets/js/bttb.js"></script>
+    <script src="./../assets/js/dark_mode.js"></script>
   </body>
 </html>
