--- a/en/sponsori.html
+++ b/en/sponsori.html
@@ -434,8 +434,8 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./../assets/js/navbar.js"></script>
-    <script src="./../assets/js/bttb.js"></script>
-    <script src="./../assets/js/dark_mode.js"></script>
+    <script src="../assets/js/navbar.js"></script>
+    <script src="../assets/js/bttb.js"></script>
+    <script src="js/dark_mode.js"></script>
   </body>
 </html>
