--- a/en/formular.html
+++ b/en/formular.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
-    <link rel="icon" href="assets/images/Icons/tab_icon.png" type="image/x-icon">
+    <link rel="icon" href="../assets/images/Icons/tab_icon.png" type="image/x-icon">
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -20,15 +20,15 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/bttb.css" />
-    <link rel="stylesheet" href="assets/css/formular.css" />
-    <link rel="stylesheet" href="assets/css/navbar.css" />
-    <link rel="stylesheet" href="assets/css/footer.css" />
-    <link rel="stylesheet" href="assets/css/scroll-bar.css" />
+    <link rel="stylesheet" href="../assets/css/style.css" />
+    <link rel="stylesheet" href="../assets/css/bttb.css" />
+    <link rel="stylesheet" href="../assets/css/formular.css" />
+    <link rel="stylesheet" href="../assets/css/navbar.css" />
+    <link rel="stylesheet" href="../assets/css/footer.css" />
+    <link rel="stylesheet" href="../assets/css/scroll-bar.css" />
     <link
       rel="shortcut icon"
-      href="assets/images/about.png"
+      href="../assets/images/about.png"
       type="image/x-icon"
     />
 
@@ -90,7 +90,7 @@
           <a class="navbar-brand me-auto" href="."
             ><img
               class="imagine-navbar"
-              src="assets/images/Branding Zenith/Sigla_mov.png"
+              src="../assets/images/Branding Zenith/Sigla_mov.png"
           /></a>
           <div
             class="offcanvas offcanvas-end"
@@ -102,7 +102,7 @@
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
                 <img
                   class="imagine-navbar"
-                  src="assets/images/Branding Zenith/Sigla_mov.png"
+                  src="../assets/images/Branding Zenith/Sigla_mov.png"
                 />
               </h5>
               <button
@@ -118,25 +118,25 @@
                   <a class="nav-link mx-lg-2" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mx-lg-2" href="echipa.html">Echipă</a>
+                  <a class="nav-link mx-lg-2" href="echipa.html">Team</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mx-lg-2" href="blog.html">Activitate</a>
+                  <a class="nav-link mx-lg-2" href="blog.html">Activity</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mx-lg-2" href="rezultate.html">Rezultate</a>
+                  <a class="nav-link mx-lg-2" href="rezultate.html">Results</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mx-lg-2" href="sponsori.html">Sponsori</a>
+                  <a class="nav-link mx-lg-2" href="sponsori.html">Sponsors</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mx-lg-2" href="galerie.html">Galerie</a>
+                  <a class="nav-link mx-lg-2" href="galerie.html">Gallery</a>
                 </li>
                 <li class="nav-item">
                   <a
                     class="nav-link mx-lg-2 active"
                     aria-current="page"
-                    href="formular.html">Contact</a>
+                    href="formular.html">Contact us</a>
                 </li>
                 <li>
                   <button id="theme-toggle" class="btn btn-sm" aria-label="Toggle dark mode">
@@ -161,30 +161,30 @@
       <!-- Contact page -->
       <main>
         <div class="container form-container">
-        <span class="custom-span">Contactează-ne</span>
+        <span class="custom-span">Contact us</span>
         <form target = "_blank" action="/.netlify/functions/contact" method="POST">
             <div class="form-group">
                 <div class="form-row">
                     <div class="col">
-                        <input type="text" name="name" class="form-control" placeholder="Numele complet" required>
+                        <input type="text" name="name" class="form-control" placeholder="Full name" required>
                     </div>
                     <div class="col">
-                        <input type="email" name="email" class="form-control" placeholder="Adresa de mail" required>
+                        <input type="email" name="email" class="form-control" placeholder="Mail address" required>
                     </div>
                     <div class="col">
-                        <input type="text" name="subject" class="form-control" placeholder="Subiectul" required>
+                        <input type="text" name="subject" class="form-control" placeholder="Subject" required>
                     </div>
                 </div>
             </div>
             <div class="form-group">
-                <textarea placeholder="Mesajul tău" class="form-control" name="message" rows="5" required></textarea>
+                <textarea placeholder="Your message" class="form-control" name="message" rows="5" required></textarea>
             </div> <br>
 
             <!-- Google reCAPTCHA v2 checkbox -->
             <div class="g-recaptcha" data-sitekey="6LfrQKcrAAAAAJCmj6lYESrY1iYhzCE710MjLG5p"></div>
             <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
-            <button id = 'trimite' type="submit" class="btn btn-lg btn-block form-button">Trimite mail</button>
+            <button id = 'trimite' type="submit" class="btn btn-lg btn-block form-button">Send mail</button>
         </form>
 
         </div>
@@ -267,11 +267,11 @@
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     
-    <script src="./assets/js/navbar.js"></script>
-    <script src="./assets/js/bttb.js"></script>
-    <script src="./assets/js/dark_mode.js"></script>
+    <script src="../assets/js/navbar.js"></script>
+    <script src="../assets/js/bttb.js"></script>
+    <script src="js/dark_mode.js"></script>
 
-    <script src = 'assets/js/submitform.js'></script>
+    <script src = '../assets/js/submitform.js'></script>
 
   </body>
 </html>
