--- a/en/thank-you.html
+++ b/en/thank-you.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="icon" href="assets/images/Icons/tab_icon.png" type="image/x-icon">
+  <link rel="icon" href="../assets/images/Icons/tab_icon.png" type="image/x-icon">
 
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
@@ -20,14 +20,14 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
   />
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="stylesheet" href="assets/css/navbar.css" />
-  <link rel="stylesheet" href="assets/css/footer.css" />
-  <link rel="stylesheet" href="assets/css/bttb.css" />
-  <link rel="stylesheet" href="assets/css/scroll-bar.css" />
+  <link rel="stylesheet" href="../assets/css/style.css" />
+  <link rel="stylesheet" href="../assets/css/navbar.css" />
+  <link rel="stylesheet" href="../assets/css/footer.css" />
+  <link rel="stylesheet" href="../assets/css/bttb.css" />
+  <link rel="stylesheet" href="../assets/css/scroll-bar.css" />
   <link
     rel="shortcut icon"
-    href="assets/images/about.png"
+    href="../assets/images/about.png"
     type="image/x-icon"
   />
   
@@ -76,7 +76,7 @@
       <a class="navbar-brand me-auto" href="."
         ><img
           class="imagine-navbar"
-          src="assets/images/Branding Zenith/Sigla_mov.png"
+          src="../assets/images/Branding Zenith/Sigla_mov.png"
       /></a>
       <div
         class="offcanvas offcanvas-end"
@@ -88,7 +88,7 @@
           <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
             <img
               class="imagine-navbar"
-              src="assets/images/Branding Zenith/Sigla_mov.png"
+              src="../assets/images/Branding Zenith/Sigla_mov.png"
             />
           </h5>
           <button
@@ -104,22 +104,22 @@
               <a class="nav-link mx-lg-2" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mx-lg-2" href="echipa.html">Echipă</a>
+              <a class="nav-link mx-lg-2" href="echipa.html">Team</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mx-lg-2" href="blog.html">Activitate</a>
+              <a class="nav-link mx-lg-2" href="blog.html">Activity</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mx-lg-2" href="rezultate.html">Rezultate</a>
+              <a class="nav-link mx-lg-2" href="rezultate.html">Results</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mx-lg-2" href="sponsori.html">Sponsori</a>
+              <a class="nav-link mx-lg-2" href="sponsori.html">Sponsors</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mx-lg-2" href="galerie.html">Galerie</a>
+              <a class="nav-link mx-lg-2" href="galerie.html">Gallery</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link mx-lg-2" href="formular.html">Contact</a>
+              <a class="nav-link mx-lg-2" href="formular.html">Contact us</a>
             </li>
             <li>
               <button id="theme-toggle" class="btn btn-sm" aria-label="Toggle dark mode">
@@ -209,7 +209,7 @@
     </div>
   </footer>
 
-  <script src="./assets/js/navbar.js"></script>
-  <script src="./assets/js/dark_mode.js"></script>
+  <script src="../assets/js/navbar.js"></script>
+  <script src="js/dark_mode.js"></script>
 </body>
 </html>
