--- a/thank-you.html
+++ b/thank-you.html
@@ -143,7 +143,7 @@
 
   <!-- Main content -->
   <main class="d-flex justify-content-center align-items-center">
-      <span class="custom-span">Thank you! Your message has been sent.</span>
+      <span class="custom-span">Mulțumim! mesajul tău a fost trimis.</span>
   </main>
   
   <!-- Footer -->
