--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                   class="nav-link mx-lg-2 active"
                   aria-current="page"
                   href="index.html"
-                  >Home</a
+                  >Acasă</a
                 >
               </li>
               <li class="nav-item">
