--- a/echipa.html
+++ b/echipa.html
@@ -84,7 +84,7 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <li class="nav-item">
-                <a class="nav-link mx-lg-2" href="index.html">Home</a>
+                <a class="nav-link mx-lg-2" href="index.html">Acasă</a>
               </li>
               <li class="nav-item">
                 <a
