--- a/en/echipa.html
+++ b/en/echipa.html
@@ -222,7 +222,7 @@
       </div>
     </div>
 
-    <!-- Volunteeri -->
+    <!-- Voluntari -->
     <div id = 'voluntari' class="team-area">
       <div class="section-title">
         <span class="custom-span"> Team volunteers </span>
@@ -237,11 +237,6 @@
 
       <!-- !!! data-name trebuie sa fie exact ca cele de aici de sus !!! -->
       <div class="team-box">
-        <div class="box box-voluntar" data-name="mecanica-v">
-          <img src="../assets/images/Voluntari/Radu Indolean.JPG" alt="" />
-          <h2>Radu Indolean</h2>
-          <span>Robot building Volunteer</span>
-        </div>
         <div class="box box-voluntar" data-name="mecanica-v">
           <img src="../assets/images/Voluntari/Rares Calugaru.JPG" alt="" />
           <h2>Rareș Călugăru</h2>
@@ -287,7 +282,6 @@
           <h2>Oana Ursache</h2>
           <span>Graphics design Volunteer</span>
         </div>
-
       </div>
     </div>
 
