--- a/en/thank-you.html
+++ b/en/thank-you.html
@@ -100,6 +100,15 @@
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+            <li class = 'nav-item'>
+              <a class = 'nav-link language-btn' onclick = 'toggle_dropdown()'>
+                Language
+              </a>
+              <div class = 'language-dropdown'>
+                  <a class = 'lang-link' onclick = 'changelang("ro", "thank-you.html")'>RO</a>
+                  <a class = 'lang-link' onclick = 'changelang("en", "/en/thank-you.html")'>EN</a>
+                </div>
+            </li>
             <li class="nav-item">
               <a class="nav-link mx-lg-2" href="index.html">Home</a>
             </li>
