--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+              <li class = 'nav-item'>
+                <a class = 'nav-link language-btn' onclick = 'toggle_dropdown()'>
+                  Language
+                </a>
+                <div class = 'language-dropdown'>
+                    <a class = 'lang-link' onclick = 'changelang("ro", "index.html")'>RO</a>
+                    <a class = 'lang-link' onclick = 'changelang("en", "/en/index.html")'>EN</a>
+                  </div>
+              </li>
               <li class="nav-item">
                 <a
                   class="nav-link mx-lg-2 active"
